# Strong-Fitness-Studio-App

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  pyproject.toml  render.yaml  seed_database.py  setup_database.py  utils.py  🏠_Homepage.py
backend/: db.py  main.py  schemas.py  settings.py
backend/api/: router.py
backend/api/routes/: athletes.py  evaluations.py  exercises.py  payments.py  training_sessions.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  ColorModeProvider.tsx  main.tsx  theme.ts
frontend/src/api/: athletes.ts  client.ts  evaluations.ts  exercises.ts  payments.ts  trainingSessions.ts
frontend/src/components/: ReservedLinearProgress.tsx  TrainingSessionDetailsCard.tsx
frontend/src/pages/: AnalysisPage.tsx  AthletesPage.tsx  CalendarPage.tsx  EvaluationsPage.tsx  ExercisesPage.tsx  PaymentsPage.tsx  SessionsPage.tsx  TreinoRunnerPage.tsx
frontend/src/utils/: formatPhoneNumber.ts
pages/: 1_🏋️_Athletes.py  1_🏋️_Atletas.py  2_💪_Exercicios.py  2_💪_Exercises.py  3_📝_Plano_de_Treino.py  3_📝_Training_Session_Scheduler.py  4_📅_Calendário_de_Treinos.py  4_📅_Training_Calendar.py  5_📋_Training_Session.py  5_📋_Treino.py  6_📊_Análise.py  6_📊_Training_Session_Analytics.py  7_🔍_Avaliação.py
scripts/: init_db.py
